# ai-council

./: .gitignore  CLAUDE.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
backends/langgraph/: pyproject.toml
backends/langgraph/council_langgraph/: __init__.py
backends/litellm/: pyproject.toml
backends/litellm/council_litellm/: __init__.py
core/: pyproject.toml
core/core/: __init__.py  config.py  db.py  types.py
core/tests/: test_config.py  test_db.py
docker/: init.sql
