# Root pyproject.toml — uv workspace root.
#
# Analogy for Java engineers: this is the parent pom.xml (Maven multi-module) or
# the root settings.gradle (Gradle multi-project). It does not define a runnable
# package itself — it just tells uv "these sub-directories are workspace members
# that should all share the same virtual environment and lockfile."
#
# uv resolves all members' dependencies together into a single .venv at the
# workspace root, similar to how Gradle composite builds share a dependency cache.

[project]
name = "ai-council"
version = "0.1.0"
requires-python = ">=3.12"

# [tool.uv.workspace] is the uv-specific section that declares which
# sub-directories are workspace members. Each member must have its own
# pyproject.toml. Glob patterns are supported (e.g. "backends/*").
[tool.uv.workspace]
members = [
    "core",
    "backends/litellm",
    "backends/langgraph",
]

# Dev tools live at the workspace root so `uv sync --group dev` from the
# repo root installs them for all members.  Individual members do not need
# their own dev groups.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

# Tell pytest-asyncio to treat all `async def test_*` functions as async tests
# without requiring an explicit @pytest.mark.asyncio decorator on each one.
[tool.pytest.ini_options]
asyncio_mode = "auto"
